# lantern

./: .gitignore  ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: aura-desktop.yml
apps/aura/: DESKTOP.md  INSTALL-MAC.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/aura/public/: _headers
apps/aura/server/: package.json  schema.sql  wrangler.toml
apps/aura/src/: App.tsx  main.tsx  styles.css
apps/aura/src-tauri/: Cargo.toml  tauri.conf.json
apps/aura/src-tauri/capabilities/: default.json
apps/aura/src-tauri/icons/: icon.icns
apps/aura/src-tauri/src/: lib.rs  main.rs
apps/ballast/: .gitignore  CLAUDE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
apps/ballast/public/: _headers
apps/ballast/scripts/: ocr-assets.mjs
apps/ballast/server/: package-lock.json  package.json  schema.sql  wrangler.toml
apps/ballast/src/: App.tsx  main.tsx  styles.css
apps/driftless/: .gitignore  CLAUDE.md  DEPLOY.md  HARDENING.md  MEDIA_PLAN.md  README.md  SECURITY.md  SHARING_PLAN.md  STRANDS_PLAN.md  SYNC_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
apps/driftless/.github/: FUNDING.yml
apps/driftless/public/: _headers
apps/driftless/scripts/: backup.sh  fetch-fonts.md
apps/driftless/server/: package-lock.json  package.json  schema.sql  wrangler.toml
apps/driftless/src/: App.tsx  fonts.css  main.tsx  (+1 more)
apps/hearth/: .gitignore  CLAUDE.md  FOOD_DATA.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
(+184 files in other folders)
