[package]
name = "aura"
version = "0.1.0"
description = "Aura — set the atmosphere of your space"
authors = ["Aura"]
edition = "2021"

# The library the desktop binary and the (future) mobile entry points share.
[lib]
name = "aura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
